# photoshop-haskell

./: .gitignore  Foto.hs  LICENSE  README.md  lena.ppm  main.hs  photoshop-haskell.cabal  run.sh  stack.yaml
assets/: lena.ppm
src/: Foto.hs  Main.hs
