name:                photoshop-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/photoshop-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Pedro
maintainer:          pvale94@gmail.com
copyright:           2020 Pedro
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable photoshop-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Foto
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, QuickCheck
  ghc-options:         -Wall
